Security: Remove hardcoded credentials and implement major improvements
 Security Fixes:
- Remove files containing service role keys (create_ama_osei_auth.js, create_dispatcher_auth_users.js, etc.)
- Replace all hardcoded Supabase URLs and anon keys with environment variables
- Add security cleanup scripts for future use

 Feature Improvements:
- Fix chat authentication for dual auth system (dispatchers vs civilians)
- Improve chat role display (show dispatchers as 'Dispatcher' instead of 'User')
- Make current location non-clickable in UserHomeScreen
- Add comprehensive certificate application database system

 UI/UX Fixes:
- Fix React Native Paper shadow overflow warnings across all components
- Replace shadowColor/elevation with borderWidth/borderColor styling
- Improve incident tracking and location display
- Enhanced error handling and session management

 Database & Testing:
- Add location address migration and column updates
- Implement incident history fixes and status sync
- Add comprehensive test scripts for realtime functionality
- Document security procedures and incident restrictions

All sensitive credentials now use environment variables and .env is protected by .gitignore.

--- a/app.json
+++ b/app.json
@@ -5,6 +5,9 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "userInterfaceStyle": "light",
+    "extra": {
+      "googleMapsApiKey": "${EXPO_PUBLIC_GOOGLE_MAPS_API_KEY}"
+    },
     "splash": {
       "image": "./src/assets/splash.png",
       "resizeMode": "contain",
@@ -18,6 +21,9 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.firerescue.app",
+      "config": {
+        "googleMapsApiKey": "${EXPO_PUBLIC_GOOGLE_MAPS_API_KEY}"
+      },
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "This app needs access to location to find the nearest fire station and provide accurate incident reporting.",
         "NSLocationAlwaysAndWhenInUseUsageDescription": "This app needs access to location to find the nearest fire station and provide accurate incident reporting."
