--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.0.1",
     "expo": "^53.0.20",
-    "expo-av": "~15.1.7",
+    "expo-audio": "^0.4.8",
     "expo-constants": "^17.1.7",
     "expo-font": "^13.0.4",
     "expo-image-picker": "~16.1.4",
